# multi-camera-motion

./: CMakeLists.txt
src/: approx_pose_mex.cpp  approx_relpose_axial_fast.cpp  approx_relpose_generalized_fast.cpp  test_approx_pose.cpp  test_approx_pose_my.cpp
